--- a/CGB1905Hotel/src/main/resources/templates/pages/login.html
+++ b/CGB1905Hotel/src/main/resources/templates/pages/login.html
@@ -32,12 +32,12 @@
                 <div class="content">
                   <form method="post" action="login.html" class="form-validate" id="loginFrom">
                     <div class="form-group">
-                      <input id="login-username" type="text" name="userName" required data-msg="请输入用户名" placeholder="用户名" value="admin" class="input-material">
+                      <input id="login-username" type="text" name="userName" required data-msg="请输入用户名" placeholder="用户名" value="" class="input-material">
                     </div>
                     <div class="form-group">
                       <input id="login-password" type="password" name="passWord" required data-msg="请输入密码" placeholder="密码" class="input-material">
                     </div>
-                    <button id="login" type="submit" class="btn btn-primary">登录</button>
+                    <button id="login" type="button" class="btn btn-primary">登录</button>
                     <div style="margin-top: -40px;"> 
                     	<!-- <input type="checkbox"  id="check1"/>&nbsp;<span>记住密码</span>
                     	<input type="checkbox" id="check2"/>&nbsp;<span>自动登录</span> -->
@@ -65,7 +65,7 @@
     <script src="login/js/bootstrap.min.js"></script>
     <script src="login/vendor/jquery-validation/jquery.validate.min.js"></script><!--表单验证-->
     <!-- Main File-->
-    <script src="login/js/front.js"></script>
+    <!--   <script src="login/js/front.js"></script>  -->
     <script>
     	$(function(){
     		/*判断上次是否勾选记住密码和自动登录*/
@@ -95,16 +95,41 @@
     		}*/
     		/*登录*/
     		$("#login").click(function(){
-    			var userName=$("#login-username").val();
-    			var passWord=$("#login-password").val();
+    			var username=$("#login-username").val();
+    			var password=$("#login-password").val();
     			/*获取当前输入的账号密码*/
-    			localStorage.setItem("userName",userName)
-    			localStorage.setItem("passWord",passWord)
-    			/*获取记住密码  自动登录的 checkbox的值*/
-    			var check1 = $("#check1").prop('checked');
-	    		var check2 = $('#check2').prop('checked');
-	    		localStorage.setItem("check1",check1);
-	    		localStorage.setItem("check2",check2);
+    			// localStorage.setItem("userName",userName)
+    			// localStorage.setItem("passWord",passWord)
+    			// /*获取记住密码  自动登录的 checkbox的值*/
+    			// var check1 = $("#check1").prop('checked');
+	    		// var check2 = $('#check2').prop('checked');
+	    		// localStorage.setItem("check1",check1);
+	    		// localStorage.setItem("check2",check2);
+
+                $.ajax({
+                    url:"user/doLogin",//请求的url地址
+                    dataType:"json",//返回的格式为json
+                    async:true,//请求是否异步，默认true异步，这是ajax的特性
+                    data:{"username":username, "password":password},//参数值
+                    type:"post",//请求的方式
+                    success:function(data){
+                        //如果状态码为1, 说明用户名和密码正确, 登录成功
+                        if (data.state == 1) {
+
+                            console.log(data);
+                            alert("登录成功");
+                            //js页面跳转函数
+                            window.location.href="userIndex";
+                        } else {
+                            console.log(data);
+                            alert(data.message);
+                            //js刷新页面函数
+                            location.reload();
+                        }
+
+                    },//请求成功的处理
+                });
+
     		})
     		
     		/*$("#check2").click(function(){
